styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Font family */
@import url('https://fonts.googleapis.com/css2?family=Urbanist:wght@400;500;600;700&display=swap');

/* Making default font family */
body {
  font-family: 'Urbanist', sans-serif;
}

#__next {
  height: 100vh;
  display: grid;
  grid-template-rows: 76px auto;
}

/* scrollable */

.scrollColorDark {
  overflow-y: scroll;
}

/* width */

.scrollColorDark::-webkit-scrollbar {
  width: 8px;
}

/* Track */

.scrollColorDark::-webkit-scrollbar-track {
  background: transparent;
}

/* Handle */

.scrollColorDark::-webkit-scrollbar-thumb {
  background: #202c46;
  border-radius: 20px;
}

/* Handle on hover */

.scrollColorDark::-webkit-scrollbar-thumb:hover {
  background: #304269;
}

.scrollColorLight {
  overflow-y: scroll;
}

/* width */

.scrollColorLight::-webkit-scrollbar {
  width: 8px;
}

/* Track */

.scrollColorLight::-webkit-scrollbar-track {
  background: transparent;
}

/* Handle */

.scrollColorLight::-webkit-scrollbar-thumb {
  background: #bbb;
  border-radius: 20px;
}

/* Handle on hover */

.scrollColorLight::-webkit-scrollbar-thumb:hover {
  background: #aaa;
}

/* Homepage Paragraph equally aligned   */
blockquote,
dl,
dd,
h1,
h2,
h3,
h4,
h5,
h6,
hr,
figure,
p,
pre {
  text-align: justify !important;
}
/* setting root value for main scrollbar */
:root {
  --scroll-thumb: #bbb;
  --scroll-thumb-hover: #aaa;
  --scroll-track: #f3f4f6;
}

[data-theme='dark'] {
  --scroll-thumb: #202c46;
  --scroll-thumb-hover: #304269;
  --scroll-track: #101623;
}

/* for the main website scrollbar */

/* Webkit Browsers */
::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-track {
  background: var(--scroll-track);
}

::-webkit-scrollbar-thumb {
  background: var(--scroll-thumb);
  border-radius: 25px;
}

::-webkit-scrollbar-thumb:hover {
  background: var(--scroll-thumb-hover);
}

/* Firefox */
* {
  scrollbar-width: thin;
  scrollbar-color: var(--scroll-thumb) var(--scroll-track);
}

/* Microsoft Edge and IE */
*::-ms-scrollbar {
  width: 10px;
}

*::-ms-scrollbar-track {
  background: var(--scroll-track);
}

*::-ms-scrollbar-thumb {
  background: var(--scroll-thumb);
  border-radius: 25px;
}

*::-ms-scrollbar-thumb:hover {
  background: var(--scroll-thumb-hover);
}

/* Standard Scrollbar (Chrome, Opera, Edge, and IE) */
* {
  scrollbar-width: thin;
  scrollbar-color: var(--scroll-thumb) var(--scroll-track);
}
@media (min-width: 597px) and (max-width: 800px) {
  .grid-cols-1 {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }
}

.image-wrapper {
  position: relative;
}

.image-effect {
  position: relative;
  top: 20px;
  right: 15px;
}

.image-effect:hover span {
  position: absolute;
  top: -2px;
  left: -1px;
  white-space: nowrap;
  padding: 0.3rem 1rem;
  font-size: 0.75rem;
  font-weight: 500;
  background-color: #6b46c1;
  color: white;
  border-radius: 2rem;
  border-top-left-radius: 2rem;
  border-bottom-left-radius: 2rem;
}

/* This media query targets devices or browsers that have enabled reduced motion preferences.
   It ensures that animations and transitions are minimized to improve user experience for motion-sensitive users.
*/
@media (prefers-reduced-motion: reduce) {
  /* Apply the following styles to all elements */
  *,
  /* Apply the following styles to all pseudo-elements (::before, ::after) */
  ::before,
  ::after {
    /* Disables animations by setting a negative animation delay and duration.
       This effectively cancels any animations on the page.
    */
    animation-delay: -1ms !important;
    animation-duration: 1ms !important;
    animation-iteration-count: 1 !important;
    animation: none !important;

    /* Disables background-attachment: fixed, which prevents elements with fixed backgrounds from remaining in place while scrolling.
       This reduces the perception of motion when scrolling.
      */
    background-attachment: initial !important;

    /* Reverts scroll-behavior to its default value 'auto', which prevents smooth scrolling behavior.
         Smooth scrolling may cause discomfort to motion-sensitive users.
      */
    scroll-behavior: auto !important;

    /* Sets transition duration and delay to 0 seconds, effectively disabling all transitions.
         This prevents any element from animating when its properties change.
      */
    transition-duration: 0s !important;
    transition-delay: 0s !important;
    transition: none !important;
  }
}

.purpleScrollbar {
  scrollbar-color: #714eff transparent;
}

.purpleScrollbar::-webkit-scrollbar {
  width: 6px;
  background-color: white;
  box-shadow: inset 0px 2px 2px rgba(0, 0, 0, 0.11);
  border-radius: 12px;
  transition: box-shadow 0.2s;
}

.purpleScrollbar::-webkit-scrollbar-thumb {
  width: 6px;
  background-color: #714eff;
  border-radius: 12px;
  transform: scale(1);
  transition: all 0.2s;
}

.purpleScrollbar::-webkit-scrollbar-thumb:hover {
  background-color: #714effcc;
  transform: scale(1.01);
}

.purpleScrollbar::-webkit-scrollbar-thumb:active {
  background-color: #714eff;
}

/* width */

.scrollColorDarkMobile::-webkit-scrollbar {
  width: 6px;
}

/* Track */

.scrollColorDarkMobile::-webkit-scrollbar-track {
  background: #BDBDBD33;
}

/* Handle */

.scrollColorDarkMobile::-webkit-scrollbar-thumb {
  background: #fff;
  border-radius: 20px;
}

/* Handle on hover */

.scrollColorDarkMobile::-webkit-scrollbar-thumb:hover {
  background: #304269;
}

